<resources>
    <string name="app_name">OficinaESTG</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="insira_o_email">Insira o email</string>
    <string name="insira_a_password">Insira a password</string>
    <string name="login">Login</string>
    <string name="email_invalido">Email Inválido</string>
    <string name="password_invalida">Password Inválida</string>
    <string name="sem_email">Sem email</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">fechar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marca_do_carro">Marca do Carro:</string>
    <string name="modelo_do_carro">Modelo do Carro:</string>
    <string name="quilometros">Quilômetros:</string>
    <string name="semnome">Sem Nome</string>
    <string name="titulo">titulo</string>
    <string name="combustivel">Combustível</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="combutivel">Combutível:</string>
    <string name="preco">Preço</string>
    <string name="ano">Ano:</string>
    <string name="matricula">Matrícula:</string>
    <string name="stand_vendas">Stand Vendas</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="data">Data:</string>
    <string name="notas">Notas:</string>
    <string name="marcar_vistoria">Marcar vistoria:</string>
    <string name="marcar">Marcar</string>
    <string name="insirar_o_username">Insira o username</string>
    <string name="registar">Registar</string>
    <string name="eliminarcarro">Eliminar carro</string>
    <string name="reverter">Pretende eliminar o carro da lista? Não será possível reverter a ação!</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string-array name="planets_array">
        <item>Diesel</item>
        <item>Gasolina</item>
    </string-array>
</resources>