<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.DetalhesCarroVendaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="197dp"
                app:srcCompat="@drawable/logo"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_data_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/marca"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_marca_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_descricao_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/modelo"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_modelo_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_carro_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quilometros"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_quilometros_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ano_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ano"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ano_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_combustivel_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/combutivel"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_combustivel_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_matricula_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_matricula_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_preco_view"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="#082B81"
                    android:text="@string/preco"
                    android:textAlignment="center"
                    android:textColor="#FBFAFA"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_preco_tx_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#082B81"
                    android:textColor="#FBF8F8"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_vistoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#953232"
                android:text="@string/marcar_vistoria"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_venda_data"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/data"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_venda_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:textAlignment="textEnd">

                <TextView
                    android:id="@+id/tv_venda_notas"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/notas"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_venda_notas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:lines="1"
                    android:maxLines="5" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/button_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="marcarvistoria_onClick"
                android:text="@string/marcar"
                app:backgroundTint="@color/design_default_color_error" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>